<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundLayout"
    tools:context="com.evildev.laboratorio_07.ui.movies.MovieFragment">

    <TextView
        android:id="@+id/movie_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_gap"
        android:layout_marginTop="@dimen/small_gap"
        android:layout_marginEnd="@dimen/medium_gap"
        android:text="@string/movie_title_star_wars"
        android:textColor="@color/white"
        android:textSize="@dimen/small_gap"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_image" />

    <ImageView
        android:id="@+id/movie_image"
        android:layout_width="250dp"
        android:layout_height="344dp"
        android:layout_marginStart="@dimen/medium_gap"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="@dimen/medium_gap"
        android:src="@drawable/star_wars"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/movie_category"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_gap"
        android:text="@string/movie_category_science_fiction"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="@+id/movie_title"
        app:layout_constraintTop_toBottomOf="@+id/movie_title" />

    <TextView
        android:id="@+id/movie_qualification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_gap"
        android:text="@string/movie_qualification_star_wars"
        android:textColor="@color/qualification"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/movie_category"
        app:layout_constraintEnd_toEndOf="@+id/movie_title"
        app:layout_constraintStart_toEndOf="@+id/movie_category"
        app:layout_constraintTop_toTopOf="@+id/movie_category" />

    <TextView
        android:id="@+id/movie_description"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_gap"
        android:layout_marginTop="@dimen/small_gap"
        android:layout_marginEnd="@dimen/medium_gap"
        android:text="@string/movie_description_star_wars"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movie_category" />
</androidx.constraintlayout.widget.ConstraintLayout>