<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundLayout"
    tools:context="com.evildev.laboratorio_07.ui.movies.BillboardFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/action_to_create_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/medium_gap"
        android:layout_marginBottom="@dimen/medium_gap"
        android:clickable="true"
        android:contentDescription="@string/add_item"
        android:src="@drawable/add_button_rounded"
        app:backgroundTint="@color/buttonColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/billboard_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="174dp"
        android:layout_marginTop="@dimen/medium_gap"
        android:layout_marginEnd="174dp"
        android:text="@string/billboard_title"
        android:textColor="@color/white"
        android:textSize="@dimen/medium_gap"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_star_wars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_gap"
        android:layout_marginTop="@dimen/medium_gap"
        android:layout_marginEnd="@dimen/medium_gap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/billboard_title">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cardLayout">

            <TextView
                android:id="@+id/movie_title_star_wars"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_gap"
                android:layout_marginEnd="@dimen/medium_gap"
                android:text="@string/movie_title_star_wars"
                android:textColor="@color/white"
                android:textSize="@dimen/small_gap"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.515"
                app:layout_constraintStart_toEndOf="@+id/movie_picture_star_wars"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.219" />

            <ImageView
                android:id="@+id/movie_picture_star_wars"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="@dimen/small_gap"
                android:layout_marginTop="@dimen/small_gap"
                android:layout_marginBottom="@dimen/small_gap"
                android:src="@drawable/star_wars"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/movie_qualification_star_wars"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/movie_qualification_star_wars"
                android:textColor="@color/qualification"
                android:textSize="@dimen/small_gap"
                app:layout_constraintStart_toStartOf="@+id/movie_title_star_wars"
                app:layout_constraintTop_toBottomOf="@+id/movie_title_star_wars" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView_harry_potter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/medium_gap"
        android:layout_marginTop="@dimen/medium_gap"
        android:layout_marginEnd="@dimen/medium_gap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView_star_wars">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/cardLayout">

            <TextView
                android:id="@+id/movie_title_harry_potter"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_gap"
                android:layout_marginEnd="@dimen/medium_gap"
                android:text="@string/movie_title_harry_potter"
                android:textColor="@color/white"
                android:textSize="@dimen/small_gap"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.515"
                app:layout_constraintStart_toEndOf="@+id/movie_picture_harry_potter"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.219" />

            <ImageView
                android:id="@+id/movie_picture_harry_potter"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginStart="@dimen/small_gap"
                android:layout_marginTop="@dimen/small_gap"
                android:layout_marginBottom="@dimen/small_gap"
                android:src="@drawable/harry_potter"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/movie_qualification_harry_potter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/movie_qualification_harry_potter"
                android:textColor="@color/qualification"
                android:textSize="@dimen/small_gap"
                app:layout_constraintStart_toStartOf="@+id/movie_title_harry_potter"
                app:layout_constraintTop_toBottomOf="@+id/movie_title_harry_potter" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>